tests/snapshots/page_snapshots__fleet_120x30.snap
---
source: tests/page_snapshots.rs
expression: wide
---
 NIKI / FLEET  1 missions · 1 active · $0.01                                                                            
                                                                                                                        
┌add a health endpoint───────────────────────────────────┐                                                              
│● RUNNING                                               │                                                              
│                                                        │                                                              
│0 agents                                                │                                                              
│50% · $0.01 · 0s                                        │                                                              
│                                                        │                                                              
└────────────────────────────────────────────────────────┘                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ↑↓ Navigate · Enter Open · P Pause · R Resume · K Kill · V Diff · Esc Back
