tests/snapshots/page_snapshots__history_80x24.snap
---
source: tests/page_snapshots.rs
expression: narrow
---
 history · /tmp/niki-page-snapshots                                             
┌ PAST RUNS ───────────────────────────────────────────────────────────────────┐
│  ID         TASK                              VERDICT     WHEN       BRNCH   │
│  ────────   ──────────────────────────────────  ──────────  ───────  ─────── │
│  No past runs found in /tmp/niki-page-snapshots\.niki\tasks                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 [j/k] navigate   [Enter] open   [Esc] back
