tests/snapshots/page_snapshots__pipeline_120x30.snap
---
source: tests/page_snapshots.rs
expression: wide
---
 pipeline                                                                                                               
  MODE default   SECURITY off   PARALLEL off                                                                            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ┌──────────────────────────┐  ┌──────────────────────────┐  ┌──────────────────────────┐  ┌──────────────────────────┐ 
 │ ◈ Planner                │  │ ⟠ Coder                  │  │ ◉ Tester                 │  │ ◆ Reviewer               │ 
 │ ✓ ✓                      │  │ ✓ ✓                      │  │ ✓ ✓                      │  │ ✓ ✓                      │ 
 │ Breaks task into struc   │  │ Implements changes in    │  │ Runs test suite and re   │  │ Independent verificati   │ 
 └──────────────────────────┘  └──────────────────────────┘  └──────────────────────────┘  └──────────────────────────┘ 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
┌ MODELS ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│▸ ◈ Planner   anthropic/claude-sonnet-4-20250514                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [j/k] next/prev   [Esc] back
