tests/snapshots/page_snapshots__run_120x30.snap
---
source: tests/page_snapshots.rs
expression: wide
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Build add a health endpoint                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
$ niki run "add a health endpoint" --project ./my-app                                                                   
◈ Planner plan ready                                                                                                    
⟠ Coder patch applied                                                                                                   
◉ Tester tests green                                                                                                    
◆ Reviewer approved                                                                                                     
✓                                                                                                                       
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
branch niki/e5c8f1 · report.md · changes.patch                                                                          
working tree: untouched                                                                                                 
tab switch agent  ctrl-p commands  esc cancel run
