tests/snapshots/page_snapshots__session_120x30.snap
---
source: tests/page_snapshots.rs
expression: wide
---
 SESSION / add a health endpoint · RUNNING                                                                              
 Conversation  Agents  Tools  Diff  Tests  Approvals  Evidence                                                          
                                                                                                                        
No messages yet.                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 Tab Cycle · ←→ Switch · Esc Back to Fleet · P Pause · R Resume
